--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/scrolldown.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway|Roboto:300" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
@@ -60,16 +60,16 @@
       solutions to solving their particular touchpoint. Thankfully,
       there were many overlaps of client service that carried over to user experience design. Earlier in 2017,
       I started turning my creative interest into seeking a new learning attainment at an immersive <a href="https://www.bloc.io">UX/UI
-      bootcamp, Bloc.</a> Through this mentor-led program, I have equipped myself with the necessary skills
+      apprenticeship, Bloc.</a> Through this mentor-led program, I have equipped myself with the necessary skills
       to perform user research, strategize, and deliver solutions from a human-centered thinking.</p>
       <p>With a deep appreciation for how the human mind works, I enjoy asking what makes us tick
         and why we do things the way we do. I am fascinated by the way technologies are changing the world
         and believe that clean and intuitive design is the hallmark of a company's success. What
         excites me the most about user experience design is that it gives the designer the opportunity
         to exercise their creative thinking to address everyday problems. As a junior designer, I am always
-        looking for new approaches to enhance my process and craftsmanship. </p>
-      <p> When I'm not designing, you can find me staying on top of my fitness, hiking, going to concerts, and
-        having great conversations at a local coffee shop. <a href="mailto:ekkalux_414@berkeley.edu">Drop me a line </a> and let's create
+        looking for new toolsets and approaches to enhance my craftsmanship. </p>
+      <p> Apart from designing, you can find me staying on top of my fitness, hiking, attending festivals, and
+        learning more about the nature of the mind and its relation to our everyday lives. <a href="mailto:ekkalux_414@berkeley.edu">Drop me a line </a> and let's create
         something awesome together! </p>
     </div>
   </div>
