--- a/equipax.html
+++ b/equipax.html
@@ -13,7 +13,7 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/equipax.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway|Roboto:300" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
@@ -209,7 +209,7 @@
       <blockquote> What If I wanted to buy a backpack after comparing? <span style="font-style: normal">
         <b>Solution:</b> Added a button under each compared products to direct users to its
       designated detail page. </blockquote>
-      <blockquote> 2. I'm having a hard time locating the live chat button.
+      <blockquote> I'm having a hard time locating the live chat button.
       <span style="font-style: normal"> <b>Solution:</b> Relocate the live chat button
       to the top navigation bar </blockquote>
     <div>
