--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/equipax.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway|Roboto:300" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
@@ -49,10 +49,10 @@
   <div class="container">
     <h2> HELLO! MY NAME IS </h2>
     <h1> EKKA<span class="lux">LUX</span> NGUYEN <span style="color:#C2C2C2">&</span> I'M A DESIGNER</h1>
-    <p> I am an enthusiastic UX Designer based in San Francisco who specializes in crafting web and mobile applications
+    <p> I am a UX Designer based in San Francisco who specializes in crafting web and mobile applications
        through an end-to-end human-centric process. I enjoy creating effortless user experience
-       and designing clean and modern products. I am currently an Operations Specialist at <a href="https://squareup.com/" target="_blank">Square</a>,
-       seeking to transition into a full-time opportunity in Product Design.
+       and designing clean and modern products. Currently an Operations Specialist at <a href="https://squareup.com/" target="_blank">Square</a>,
+       I am seeking to transition into a full-time opportunity in Product Design.
        Read more about me <a href="about.html">here</a> or check out my recent projects right below. </p>
     <p class="scroll"> SCROLL FOR MORE</p>
     <i class="fa fa-arrow-down fa-md"></i>
