--- a/gymseeker.html
+++ b/gymseeker.html
@@ -163,12 +163,12 @@
       the information architecture of Gymseeker. To plan out the structure of Gymseeker, I
       created a sitemap to use as a reference point for the creation of wireframes and
       functional specifications. </p>
-      <a href="images/equipax/flow.png"><img src="images/gymseeker/sitemap.png"></a>
+      <a href="images/gymseeker/sitemap.png"><img src="images/gymseeker/sitemap.png"></a>
       <div class="middle">
         <h3> User Flow </h3>
         <p> Using the personas as a guide, I began the development of the user flow. Using the
         user stories I created, I was able to craft four essential flows for Gymseeker. </p>
-        <a href="images/equipax/flow.png"><img src="images/gymseeker/user_flow.png"></a>
+        <a href="images/gymseeker/user_flow.png"><img src="images/gymseeker/user_flow.png"></a>
       </div>
     </div>
   </section>
@@ -267,6 +267,9 @@
           <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
           <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
       </div>
-      <p>Designed and developed with love by Ekkalux Nguyen</p>
+      <p>© 2018 All Rights Reserved | Designed and Developed by Ekkalux Nguyen</p>
     </div>
   </section>
+
+</body>
+</html>
