--- a/simplebox2.html
+++ b/simplebox2.html
@@ -75,14 +75,18 @@
   </div>
 </section>
 
-  <section class="footer">
-    <div class="container3">
-      <div class="icons">
-          <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
-          <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
-          <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
-          <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
-      </div>
-      <p>Designed and developed with love by Ekkalux Nguyen</p>
+<section class="footer">
+  <div class="container3">
+    <div class="icons">
+        <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
     </div>
-  </section>
+    <p>© 2018 All Rights Reserved | Designed and Developed by Ekkalux Nguyen</p>
+  </div>
+</section>
+
+</body>
+
+</html>
