--- a/about.html
+++ b/about.html
@@ -44,6 +44,8 @@
   </div>
 </header>
 
+<body>
+
 <section class="about">
   <div class="about_container">
     <div class="heading">
@@ -81,8 +83,12 @@
         <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
         <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
         <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
-        <a href="https://github.com/ekkalux"><i class=" fa fa-github fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
     </div>
-    <p>Designed and developed with love by Ekkalux Nguyen</p>
+    <p>© 2018 All Rights Reserved | Designed and Developed by Ekkalux Nguyen</p>
   </div>
 </section>
+
+</body>
+
+</html>
