--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
           <img src="images/equipaxbig.png">
         <div class="overlay centered full-width-height" style="background: #3F0609;">
           <div class="centered" style="text-align: center">
-              <p style="color: white"> EQUIPAX<br />
-                  Web Application
-              </p>
+              <h3>Equipax </h3>
+              <h4> Product Design | Ecommerce | Web App</h4>
           </div>
         </div>
         </a>
@@ -79,9 +78,8 @@
           <img src="images/gymseekerbig.png">
         <div class="overlay centered full-width-height" style="background: #133A55;">
           <div class="centered" style="text-align: center">
-              <p style="color: white"> GYMSEEKER <br/>
-                  Mobile Application
-              </p>
+            <h3>Gymseeker </h3>
+            <h4> Product Design | Location Service | Mobile App</h4>
           </div>
         </div>
         </a>
@@ -90,11 +88,10 @@
   <div class="container2 image_holder">
         <a href="ridestarter2.html">
           <img src="images/ridestarterbig.png">
-        <div class="overlay centered full-width-height" style="background: #0F750F;">
+        <div class="overlay centered full-width-height" style="background: #0C540C;">
           <div class="centered" style="text-align: center">
-              <p style="color: white"> RIDESTARTER<br/>
-                  Web Application
-              </p>
+            <h3>Ridestarter </h3>
+            <h4> Product Design | Crowdfunding | Web App</h4>
           </div>
         </div>
         </a>
@@ -105,9 +102,8 @@
           <img src="images/simpleboxbig.png">
         <div class="overlay centered full-width-height" style="background: #30485F;">
           <div class="centered" style="text-align: center">
-              <p style="color: white"> SIMPLEBOX <br />
-                  Web Application
-              </p>
+            <h3>Simplebox</h3>
+            <h4> Product Design | SAAS | Web App</h4>
           </div>
         </div>
         </a>
@@ -123,8 +119,10 @@
         <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
         <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
     </div>
-    <p>Designed and developed with love by Ekkalux Nguyen</p>
+    <p>© 2018 All Rights Reserved | Designed and Developed by Ekkalux Nguyen</p>
   </div>
 </section>
+
+</body>
 
 </html>
