--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -283,6 +283,9 @@
           <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
           <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
       </div>
-      <p>Designed and developed with love by Ekkalux Nguyen</p>
+      <p>© 2018 All Rights Reserved | Designed and Developed by Ekkalux Nguyen</p>
     </div>
   </section>
+
+</body>
+</html>
